.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: european-transport-feeds
  namespace: juliuste
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: european-transport-feeds
